--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
